[package]
name = "rust-php-js-min"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-php-rs = "0.10.0"
futures = "0.3.28"
minifier = "0.2.2"
tokio = { version = "1.28.0", features = ["full"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
